chore-chart-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chore-chart
  labels:
    app.kubernetes.io/name: chore-chart
