chore-chart-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chore-chart
  namespace: chore-chart
  labels:
    app.kubernetes.io/name: chore-chart
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chore-chart
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
